form/src/tests/compiles/unimplemented_nested.stderr
error[E0277]: the trait bound `u32: form::Form` is not satisfied
  --> $DIR/unimplemented_nested.rs:24:10
   |
24 | #[derive(Form)]
   |          ^^^^ the trait `form::Form` is not implemented for `u32`
   |
   = note: required by `form::Form::__assert_receiver_is_total_form`
